# PyExoCross

./: .gitignore  .pyexocross_OH.ipynb  .readthedocs.yaml  LICENSE  README.md  pyexocross.ipynb  pyexocross.py  pyexocross_os.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  setup.py  test_api_hitran.py
ExoMol_extra_tools/: check_linelist.ipynb  download_exomol_linelist_files.py  sort_transitions_with_frequency.py
ExoMol_format/: 14N-16O__NOname.cooling  14N-16O__NOname.csv  14N-16O__NOname.lifetime  14N-16O__NOname.pf  14N-16O__NOname.states  CO2.inp  H2S.inp  NO.inp  NO__T500__2000-10000__Lorentzian__ExoMol.inp  calc_xsecs.ipynb  check linelist.ipynb  check_linelist.ipynb  download_exomol_linelist_files.py  download_linelist _files.ipynb  download_linelist_files.ipynb  download_linelist_files.py  exomol_all.ipynb  exomol_functions.ipynb  exomol_master.ipynb  exomol_master.py  exomol_test.ipynb  exomol_test_old.ipynb  exomol_test_v1.ipynb  exomol_xsecs.ipynb  sort_transitions_with_frequency.py  sort_transitions_with_frequency_then_remove.py
HITRAN_format/: CO2.inp  H2S.inp  HITRAN_xsecs.ipynb  HITRAN_xsecs_numba.ipynb  HITRAN_xsecs_v1.ipynb  HITRAN_xsecs_v2.ipynb  NO.inp  hitran.inp  pre.ipynb
docs/: .readthedocs.yaml  requirements.txt  requirements_noneed.txt
docs/source/: CPUGPU.md  basicinfo.md  cite.md  command.md  conf.py  conversion.md  coolingfunc.md  coolingfunc.rst  crosssections.md  download.md  examples.md  filters.md  index.rst  intro.md  license.md  lifetimes.md  lifetimes.rst  nonlte.md  nonlte.rst  oscillatorstrengths.md  oscillatorstrengths.rst  partitionfunc.md  partitionfunc.rst  partitionfuncs.rst  report.md  requirements.md  specificheats.md  specificheats.rst  stickspectra.md  stickspectra.rst  stickspectracrosssection.md
docs/source/_static/: table-center.css
docs/source/python_api/: examples.md  functions.md  index.md  inp_mapping.md  parameters.md  quickstart.md
input/: 2H2-1H_p_exomol.inp  2H3_p_exomol.inp  AlCl_ExoMolHR.inp  AlH_ExoMol.inp  AlH_exomol.inp  AlO_exomol.inp  Al_Kurucz.inp  Ar_QDB_nlt.inp  Ar_QDB_nlte.inp  CH4_ExoMol_nlte_xsec.inp  CH4_exomol.inp  CH4_exomol_nlte.inp  CO2_ExoMol.inp  CO2_exomol.inp  CO2_hitran.inp  CO_ExoMol_cp.inp  CO_HITRAN.inp  CO_exomol.inp  CO_hitran.inp  CaH_exomol.inp  H2O_ExoMol_xsec.inp  H2O_HITRAN_xsec.inp  H2O_exomol.inp  H2O_hitran.inp  H2S_HITRAN.inp  H2S_exomol.inp  H2S_hitran.inp  H3+_ExoMol_pf.inp  H3+_exomol.inp  HCN_ExoMol_pfcpcf.inp  HCN_exomol.inp  He_QDB_nlt.inp  He_QDB_nlte.inp  LiOH_ExoMol_cp.inp  LiOH_exomol.inp  Li_NIST.inp  MgH_ExoMol_recommended.inp  MgH_exomol.inp  MgH_exomol_recommended.inp  MgH_exomol_test.inp  (+14 more)
input/non-LTE_density/: MgHVib.csv
output/: AlH_exomol.out  CH4_exomol.out  CO2_exomol.out  CO2_exomol_T3000_cutoff25_unc0.01_threhold1e-30.out  CO2_exomol_T300_cutoff25_unc0.01_threhold1e-30.out  CO_exomol.out  H2O_exomol.out  H2O_exomol_T1000_cutoff25_unc0.01_threhold1e-30.out  H2O_exomol_T10_cutoff25_unc0.01_threhold1e-30.out  H2O_exomol_T3000_cutoff25_unc0.01_threhold1e-30.out  H2O_exomol_T5000_cutoff25_unc0.01_threhold1e-30.out  H2O_exomol_cutoff25_unc0.01_threhold1e-30.out  H2O_exomol_cutoff25_unc0.01_threhold1e-40.out  H2O_exomol_dask.out  H2S_hitran.out  LiOH_exomol.out  MgH_exomol.out  MgH_hitran.out  NO_hitran.out  O2_hitran.out  SO2_exomol_T3000_cutoff25_unc0.01_threhold1e-30.out  SO2_exomol_T300_cutoff25_unc0.01_threhold1e-30.out  SO2_exomol_stick_T1000__unc0.01_threhold1e-30.out  SO2_exomol_stick_T2000__unc0.01_threhold1e-30.out  SO2_exomol_stick_T300__unc0.01_threhold1e-30.out  ZrO_exomol.out
pyexocross/: __init__.py  cli.py  config.py  core.py
pyexocross/api/: __init__.py  _resolve.py
src/: __init__.py
src/base/: config_manager.py  input.py  large_file.py  log.py
src/calculation/: __init__.py  calcualte_line_profile.py  calculate_lifetime.py  calculate_para.py  calculate_partition_func.py
src/conversion/: exomol_to_hitran.py
src/database/: load_exomol.py  load_hitran.py
src/plot/: plot_oscillator_strength.py  plot_stick_spectra.py
src/process/: S_for_LTE_NLTE_Ab_Em.py  T_n_val.py  filter_qn.py  hitran_qn.py  stick_xsec_filepath.py
src/pyexocross/: __init__.py  cli.py  config.py  core.py
src/pyexocross/api/: __init__.py  _resolve.py
src/pyexocross/base/: __init__.py  config_manager.py  constants.py  imports.py  input.py  large_file.py  log.py  qn_metadata.py  utils.py
src/pyexocross/calculation/: calcualte_line_profile.py  calculate_cooling_func.py  calculate_cross_section.py  calculate_emissivity.py  calculate_intensity.py  calculate_lifetime.py  calculate_oscillator_strength.py  calculate_specific_heat.py
src/pyexocross/conversion/: __init__.py  exomol_to_hitran.py  hitran_to_exomol.py
src/pyexocross/convert/: __init__.py  exomol_to_hitran.py  exomolhr_to_hitran.py  hitran_to_exomol.py
src/pyexocross/database/: __init__.py  data.py  load_exomol.py  load_exomolhr.py  load_hitran.py
src/pyexocross/download/: __init__.py  common.py  download_exoatom.py  download_exomol.py  download_exomolhr.py  download_hitran.py
src/pyexocross/gpu/: __init__.py  base_gpu.py  calculate_cooling_func_gpu.py  calculate_emissivity_gpu.py  calculate_intensity_gpu.py  (+1 more)
test/: test_api_exoatom.py  test_api_exoatom_gpu.py  test_api_exomol.py  test_api_exomol_gpu.py  test_api_exomolhr.py  test_api_exomolhr_gpu.py  test_api_hitran.py  test_api_hitran_gpu.py  test_api_load.py  test_api_run.py  test_data_cache.py  test_download.py  test_rocco.py
(+50 files in other folders)
