[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexocross"
version = "1.0.0"
description = "A Python package for generating molecular and atomic spectra and cross sections"
readme = "README.md"
requires-python = ">=3.8,<=3.10"
license = {text = "GPL-3.0-only"}
authors = [
    {
        name = "Jingxin Zhang",
        email = "jingxin.zhang.19@ucl.ac.uk"
    }
]
keywords = ["spectroscopy", "molecule", "atom", "cross section", "exomol", "hitran"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "tqdm",
    "tabulate",
    "numexpr",
    "astropy",
]

[project.scripts]
pyexocross = "pyexocross.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/Beryl-Jingxin/PyExoCross"
Documentation = "https://pyexocross.readthedocs.io"
Repository = "https://github.com/Beryl-Jingxin/PyExoCross"
Issues = "https://github.com/Beryl-Jingxin/PyExoCross/issues"
Publication = "https://doi.org/10.1093/rasti/rzae016"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyexocross*"]
exclude = ["test*", "docs*", "input*", "output*", "ExoMol_extra_tools*"]

[tool.setuptools.package-data]
pyexocross = ["*.txt", "*.md", "database/meta/*.txt"]
